@@ -1,15 +1,20 @@
 void call() {
- node {
-    sh """
-    docker run --rm \
-        -v \$(pwd)/migrations:/flyway/sql \
-        -v \$(pwd)/flyway.conf:/flyway/conf/flyway.conf \
-        flyway/flyway:latest \
-        -url=jdbc:snowflake://${SNOWFLAKE_URL} \
-        -user=${SNOWFLAKE_USERNAME} \
-        -password=${SNOWFLAKE_PASSWORD} \
-        -locations=filesystem:migrations \
-        migrate
-    """
-}
+    node {
+        def flywayImage = 'flyway/flyway:10.17.3' 
+
+        echo "Running Flyway Migrations..."
+
+        withEnv(["JAVA_TOOL_OPTIONS=--add-opens=java.base/java.nio=ALL-UNNAMED"]) {
+            sh """
+                docker run --rm \
+                    -v \$(pwd)/migrations:/flyway/sql \
+                    ${flywayImage} \
+                    -url=jdbc:snowflake://${SNOWFLAKE_URL} \
+                    -user=${SNOWFLAKE_USERNAME} \
+                    -password=${SNOWFLAKE_PASSWORD} \
+                    -locations=filesystem:/flyway/sql \
+                    migrate
+            """
+        }
+    }
 }
